# program

./: .env.example  .gitignore  .npmrc  Anchor.toml  README.md  esbuild.ts  package.json  tsconfig.json
app/: index.ts  logger.ts  mailer.ts  program.ts  ray.ts  squads.ts  transactions.ts  types.ts  utils.ts
app/@solana/: wallet-adapter-react.d.ts
app/instructions/: alt.ts  eda.ts  elw.ts  events.ts  index.ts  platform.ts  premium.ts  presale.ts  reward.ts  team.ts
programs/elowen/: Cargo.toml
programs/elowen/src/: constants.rs  enums.rs  events.rs  functions.rs  lib.rs  state.rs
programs/elowen/src/instructions/: alt.rs  elw.rs  mod.rs  platform.rs  reward.rs  team.rs
programs/elowen/src/instructions/eda/: elw.rs  mod.rs  sol.rs  usdc.rs
programs/elowen/src/instructions/liquidity/: mod.rs
programs/elowen/src/instructions/liquidity/cpmm/: collect.rs  deposit.rs  initialize.rs  mod.rs  swap.rs
programs/elowen/src/instructions/liquidity/mining/: claim.rs  deposit.rs  mod.rs  withdraw.rs
programs/elowen/src/instructions/premium/: buy.rs  elw.rs  mod.rs  usdc.rs
programs/elowen/src/instructions/presale/: burn.rs  buy.rs  claim.rs  mod.rs
tests/: burn-listen.ts  common.ts  create-alt.spec.ts  initialize-elw.spec.ts  transaction-listen.ts  transactions.ts  user-balances.ts  vault-balances.ts
tests/eda/: withdraw.spec.ts
tests/liquidity/: collect.spec.ts  deposit.spec.ts  get-amounts.ts  get-fees.ts  get-price.ts  initialize.spec.ts  locked-lp-info.ts  locked-lp-state.ts  pool-info.ts  ray-nfts.ts  state.ts  swap-sol.spec.ts  (+2 more)
vanity/: find.sh
(+28 files in other folders)
